Fixed issue #3336: Layout problem with lists in question text and question help text
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@7126 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/default/ie_fix_6.css
+++ b/templates/default/ie_fix_6.css
@@ -25,7 +25,7 @@
 
 
 .multiple-short-txt ul label {
-    margin-left: -1.8em;
+    margin-left: 0em;
     float:left;
     display: block;
     width: 40%;      
@@ -35,7 +35,7 @@
 
 .multiple-opt-comments ul li label{
     float: left;
-    width: 50%; 
+    width: 35%; 
     display:block; 
     margin:0;
     padding:0;    
@@ -44,7 +44,8 @@
 
 
 .multiple-opt-comments ul li span.comment{
-    float:right;
+    float:left;
+    width:40%;
     display:block;
     margin:0;
     padding:0; 
